--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
     <div class="grid grid-cols-8">
         <!-- Content Wrapper -->
         <aside class="col-span-1 py-16 bg-black h-screen border-r-2 border-white sticky top-0">
-            <div class="grid grid-rows-4 grid-flow-col justify-items-center items-center gap-y-28">
-                <div>
-                    <a href="#" class="hover:text-white text-gray-400 transition duration-300 ease-linear">
+            <div class="grid grid-rows-4 gap-y-28 justify-items-center content-evenly">
+                <div class="menu">
+                    <a href="#About"
+                        class="a hover:text-white text-gray-400 transition duration-300 ease-linear">
                         <svg class="w-5 block mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -23,7 +24,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="#" class="hover:text-white text-gray-400 transition duration-300 ease-linear">
+                    <a href="#Medium" class="a hover:text-white text-gray-400 transition duration-300 ease-linear">
                         <svg class="w-5 block mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -33,7 +34,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="#" class="hover:text-white text-gray-400 transition duration-300 ease-linear">
+                    <a href="#Projects" class="a hover:text-white text-gray-400 transition duration-300 ease-linear">
                         <svg class="w-5 block mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -43,7 +44,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="#" class="hover:text-white text-gray-400 transition duration-300 ease-linear">
+                    <a href="#Contacts" class="a hover:text-white text-gray-400 transition duration-300 ease-linear">
                         <svg class="w-5 block mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -57,17 +58,39 @@
         <!-- End Nav -->
 
         <main class="col-span-7 bg-black w-full">
-            <div class="h-96 bg-gray-50 mb-8">
-                wadadaw
-            </div>
-            <div class="h-96 bg-gray-100 mb-8">
-                wadadaw
-            </div>
-            <div class="h-96 bg-gray-200 mb-8">
-                wadadaw
-            </div>
+            <section id="About" class="page">
+                <div class="h-96 bg-gray-50 mb-8 ">
+                    About
+                </div>
+            </section>
+
+            <section id="Medium" class="page">
+                <div class="h-96 bg-gray-50 mb-8 ">
+                    Medium
+                </div>
+            </section>
+
+            <section id="Projects" class="page">
+                <div class="h-96 bg-gray-50 mb-8 ">
+                    Projects
+                </div>
+            </section>
+
+            <section id="Contacts" class="page">
+                <div class="h-96 bg-gray-50 mb-8 ">
+                    Contacts
+                </div>
+            </section>
         </main>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="active-menu-scrollspy/dist/jquery.scroll-spy.min.js"></script>
+<script>
+    $('.content-wrapper').scrollSpy({
+        target: $('.menu a'),
+        activeClass: 'active'
+    }).scroll();
+</script>
 
 </html>
