--- a/public/index.html
+++ b/public/index.html
@@ -3,54 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="styles.css">
+
     <title>Document</title>
 </head>
 
-<body class="font-body">
+<body class="font-body animation-area">
     <div class="grid grid-cols-8">
         <!-- Content Wrapper -->
-        <aside class="col-span-1 py-16 bg-black h-screen border-r-2 border-white sticky top-0">
-            <div class="grid grid-rows-4 gap-y-28 justify-items-center content-evenly">
-                <div class="menu">
-                    <a href="#About"
-                        class="a hover:text-white text-gray-400 transition duration-300 ease-linear">
+        <aside class="section-nav col-span-1 py-16 bg-black h-screen border-r-2 border-white sticky top-0 bottom-0">
+            <div class="grid grid-rows-4 place-content-evenly gap-y-28">
+                <div class="flex justify-center">
+                    <a href="#About" class="a hover:text-white text-gray-400 transition duration-300 ease-linear">
                         <svg class="w-5 block mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                         </svg>
-                        <span>About</span>
+                        <span>ABOUT</span>
                     </a>
                 </div>
-                <div>
+                <div class="flex justify-center">
                     <a href="#Medium" class="a hover:text-white text-gray-400 transition duration-300 ease-linear">
                         <svg class="w-5 block mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                         </svg>
-                        <span>Medium</span>
+                        <span>MEDIUM</span>
                     </a>
                 </div>
-                <div>
+                <div class="flex justify-center">
                     <a href="#Projects" class="a hover:text-white text-gray-400 transition duration-300 ease-linear">
                         <svg class="w-5 block mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
                         </svg>
-                        <span>Projects</span>
+                        <span>PROJECTS</span>
                     </a>
                 </div>
-                <div>
+                <div class="flex justify-center">
                     <a href="#Contacts" class="a hover:text-white text-gray-400 transition duration-300 ease-linear">
                         <svg class="w-5 block mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
                         </svg>
-                        <span>Contacts</span>
+                        <span>CONTACTS</span>
                     </a>
                 </div>
             </div>
@@ -58,39 +59,102 @@
         <!-- End Nav -->
 
         <main class="col-span-7 bg-black w-full">
-            <section id="About" class="page">
-                <div class="h-96 bg-gray-50 mb-8 ">
-                    About
+            <section id="About" class="page" data-aos="fade-right">
+                <div class="h-screen pr-4 pt-16 mb-10">
+                    <span class="uppercase font-body text-white m-4 border-b-4 border-white">About</span>
+                    <div class="grid grid-cols-2 h-full place-items-center">
+                        <div class="overflow-hidden rounded-full border-white text-white w-1/2 h-1/2 place-self-center">
+                            <img src="../src/foto mojok.jpg" alt="">
+                        </div>
+                        <div class="text-white text-center">
+                            <p>Muhammad Syukur Abadi currently studying at Universitas Negeri Malang, majoring computer
+                                science. He loves to read books, doing math stuffs, build gunpla, and have willing to
+                                teach.
+                            </p>
+                            <br>
+                            <p>He has interests in popular psychology and politics. He usually share his thoughts on his
+                                Medium
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </section>
 
-            <section id="Medium" class="page">
-                <div class="h-96 bg-gray-50 mb-8 ">
-                    Medium
+            <section id="Medium" class="page" data-aos="fade-right">
+                <div class="h-screen pr-4 pt-16 mb-10 border-b-2 border-white">
+                    <span class="uppercase font-body text-white m-4 border-b-4 border-white">Medium</span>
+                    <br>
+                    <span class="m-4 text-white pt-4">Showing Latest 3 Posts On <a href="https://muhammadsyukura.medium.com/" class="hover:border-b-2 hover:border-white">Medium</a></span>
+                    <div class="grid grid-cols-3 pt-4 pl-4 justify-items-center gap-2">
+                        <!-- Cards -->
+                        <div class="card">
+                            <img src="../src/dmitry-ratushny-O33IVNPb0RI-unsplash.jpg" alt="" class="pb-2">
+                            <span>Apakah Kita Sudah Belajar Dengan Benar?</span>
+                            <br>
+                            <p class="p-6">Belajar merupakan perjalanan spiritual dan personal, sehingga tidak dapat menjadi bahan perbandingan. Lantas, sebab-sebab apa yang membuat kita salah dalam belajar?</p>
+                            <div class="btn">
+                                <a href="https://muhammadsyukura.medium.com/apakah-kita-sudah-belajar-dengan-benar-a0868b219b08" >Visit</a> 
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="../src/freddie-marriage-wofDw8uqX6I-unsplash.jpg" alt="" class="pb-2">
+                            <span>Mempersoalkan Ketakterhinggaan</span>
+                            <br>
+                            <p class="p-6">Ketakterhinggaan merupakan bagian dari matematika yang tidak bisa dipisahkan. Namun, kadang-kadang ia muncul di tempat tak terduga. Deret Gandi merupakan penjumlahan dari 1-1+1-... yang menghasilkan nilai tak hingga. Mengapa fenomena ini bisa terjadi? </p>
+                            <div class="btn justify-self-center">
+                                <a href="https://muhammadsyukura.medium.com/mempersoalkan-ketakterhinggaan-ab6b8efb2122" >Visit</a> 
+                            </div>
+                        </div>
+                        <div class="bg-white">
+                            hadew
+                        </div>
+                    </div>
                 </div>
             </section>
 
             <section id="Projects" class="page">
-                <div class="h-96 bg-gray-50 mb-8 ">
-                    Projects
+                <div class="h-screen pr-4 pt-16 mb-10 border-b-2 border-white">
+                    <span class="uppercase font-body text-white m-4 border-b-4 border-white">Projects</span>
                 </div>
             </section>
 
             <section id="Contacts" class="page">
-                <div class="h-96 bg-gray-50 mb-8 ">
-                    Contacts
+                <div class="h-screen pr-4 pt-16 mb-10 border-b-2 border-white">
+                    <span class="uppercase font-body text-white m-4 border-b-4 border-white">Contacts</span>
                 </div>
             </section>
         </main>
     </div>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            delay:200,
+            duration:1000,
+            once:false,
+            mirror:true,
+        });
+    </script>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="active-menu-scrollspy/dist/jquery.scroll-spy.min.js"></script>
 <script>
-    $('.content-wrapper').scrollSpy({
-        target: $('.menu a'),
-        activeClass: 'active'
-    }).scroll();
+    window.addEventListener('DOMContentLoaded', () => {
+
+        const observer = new IntersectionObserver(entries => {
+            entries.forEach(entry => {
+                const id = entry.target.getAttribute('id');
+                if (entry.intersectionRatio > 0) {
+                    document.querySelector(`aside div a[href="#${id}"]`).parentElement.classList.add('active');
+                } else {
+                    document.querySelector(`aside div a[href="#${id}"]`).parentElement.classList.remove('active');
+                }
+            });
+        });
+
+        // Track all sections that have an `id` applied
+        document.querySelectorAll('section[id]').forEach((section) => {
+            observer.observe(section);
+        });
+
+    });
 </script>
 
 </html>
